vlib/v/checker/tests/no_interface_instantiation_b.out
vlib/v/checker/tests/no_interface_instantiation_b.vv:6:5: error: expected 1 arguments, but got 0
    4 |
    5 | fn main() {
    6 |     my_fn()
      |     ~~~~~~~
    7 | }